# atomisation_prediction

./: .gitignore  README.md  dataset.py  descriptor.py  model.py  pyproject.toml  scaler.py  torch_tmp.py  train.py  train_models.py  validate.ipynb
