[project]
name = "atom-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.24.0",
    "dscribe>=2.1.1",
    "gpaw>=25.1.0",
    "joblib>=1.4.2",
    "lightning>=2.5.0.post0",
    "llvmlite>=0.43.0",
    "numba>=0.60.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "tabulate>=0.9.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
